--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,5 @@ plugins {
     id 'com.android.library' version '8.0.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id 'com.google.dagger.hilt.android' version '2.46.1' apply false
+    id 'com.android.dynamic-feature' version '8.0.0' apply false
 }
