--- a/feature_detail/build.gradle
+++ b/feature_detail/build.gradle
@@ -1,26 +1,22 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.dynamic-feature'
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-parcelize'
     id "dagger.hilt.android.plugin"
     id 'kotlin-kapt'
 }
-
 android {
-    namespace 'com.radenyaqien.githubuser2023'
+    namespace 'com.radenyaqien.feature_detail'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.radenyaqien.githubuser2023"
         minSdk 24
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    buildFeatures {
+        viewBinding true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -34,20 +30,12 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
-    buildFeatures {
-        viewBinding true
-    }
-    kapt {
-        correctErrorTypes true
-    }
-    dynamicFeatures = [':feature_detail']
 }
 
 dependencies {
+    implementation project(":core")
+    implementation project(":app")
 
-    implementation(project(":core"))
-
-    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -59,16 +47,11 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.46.1'
     kapt 'com.google.dagger:hilt-compiler:2.46.1'
     implementation 'androidx.annotation:annotation:1.6.0'
-    implementation 'com.google.android.play:feature-delivery:2.1.0'
 
-    // For Kotlin users, also add the Kotlin extensions library for Play Feature Delivery:
-    implementation 'com.google.android.play:feature-delivery-ktx:2.1.0'
     implementation('io.coil-kt:coil:2.4.0')
-    //coroutine
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1'
-
+    implementation 'androidx.core:core-ktx:1.10.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.annotation:annotation:1.6.0'
 }
